prevent scrollbar

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
   background-color: #222;
   /* background-color: red; */
   color: #eee;
+  overflow: hidden;
 }
 
 #startDiv {
